bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:4: error: reassignment to val
    sleepIn=false
           ^SleepIn:6: error: reassignment to val
    sleepIn=true
           ^SleepIn:8: error: missing argument list for method sleepIn in class SleepIn
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `sleepIn _` or `sleepIn(_,_)` instead of `sleepIn`.
  return sleepIn
         ^