bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if (weekday==true){
    sleepIn=false
  } else if (vacation==true){
    sleepIn=true
  }
  return sleepIn
}